# dicom-validator

./: .appveyor.yml  .coveragerc  .gitignore  .landscape.yml  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .travis.yml  CHANGES.md  CONTRIBUTING.md  README.md  TODO.md  _typos.toml  codecov.yml  dicom-validator.spec  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_windows_exe.yml  get_edition.py  get_revision.py  pythonpackage.yml  release-deploy.yml  testsuite.yml
dcm_spec_tools/: dump_dcm_info.py  dump_dicom_info.py  get_dcm_specs.py  tag_tools.py  validate_iods.py  write_dcm_specs.py  write_specs.py
dcm_spec_tools/spec_reader/: condition.py  condition_parser.py  edition_reader.py  part3_reader.py  part4_reader.py  part6_reader.py  serializer.py  spec_reader.py
dcm_spec_tools/tests/: test_utils.py
dcm_spec_tools/validator/: dicom_file_validator.py  iod_validator.py
dicom_validator/: command_line_utils.py  dump_dcm_info.py  tag_tools.py  validate_iods.py
dicom_validator/spec_reader/: condition.py  condition_grammar.py  condition_parser.py  edition_reader.py  enum_parser.py  part3_reader.py  part4_reader.py  part6_reader.py  serializer.py  spec_reader.py
dicom_validator/tests/: conftest.py  test_cmdline_tools.py  test_utils.py  utils.py
dicom_validator/validator/: dicom_file_validator.py  dicom_info.py  error_handler.py  html_error_handler.py  iod_validator.py  (+1 more)
doc/: Makefile  conf.py  index.rst  make.bat  requirements.txt
tools/: dump_dicom_info.py  get_specs.py  validate_iods.py  write_dicom_dictionary.py  write_iod_spec.py  write_specs.py
(+83 files in other folders)
